--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
           <h2 class="title" id="title-1">Inovação, compromisso e esforço</h2>
         </div>
         <div class="background-title" id="background-1"></div>
-        <div class="column small-12 medium-6 medium-text-right">
+        <div class="column small-12 medium-5 medium-text-right align-self-middle">
           Fundada no ano de 2016, a Lenossa atua na prestação de serviços digitais visando o crescimento pessoal, empresarial e empreendedor do cliente que busca a possibilidade de negócio rentável. Disposta a orientar nessa esfera virtual, com profissionais capacitados e empenhados em oferecer soluções às diversas formas de atividades, a Lenossa une criatividade, competência, dinamicidade, elegância, funcionalidade, segurança e compromisso para satisfazer seus clientes.
         </div>
-        <!--<div class="column small-12 medium-6">-->
-          <img src="etc/lenossa-image_1.svg" alt="" class="tes">
-        <!--</div>-->
+        <div class="column small-12 medium-5 align-self-middle">
+          <img src="etc/lenossa-card.svg" alt="" class="tes">
+        </div>
       </section>
 
 
