--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
           <img src="etc/lenossa.png" alt="">
       </div>
       <div class="top-bar-right">
-        <ul class="menu">
-          <li id="inovacao"><a href="#" class="menu-navigation ">Inovação</a></li>
-            <li id="equipe"><a href="#" class="menu-navigation ">Equipe</a></li>
-            <li id="servicos"><a href="#" class="menu-navigation ">Serviços</a></li>
-            <li id="parceiros"><a href="#" class="menu-navigation ">Parceiros</a></li>
-            <li id="converse"><a href="#" class="menu-navigation ">Converse Conosco</a></li>
+        <ul class="menu" data-magellan>
+          <li><a href="#section-inovacao" class="menu-navigation ">Inovação</a></li>
+            <li><a href="#section-equipe" class="menu-navigation ">Equipe</a></li>
+            <li><a href="#section-servicos" class="menu-navigation ">Serviços</a></li>
+            <li><a href="#section-parceiros" class="menu-navigation ">Parceiros</a></li>
+            <li><a href="#section-converse" class="menu-navigation ">Converse Conosco</a></li>
           <li><a href="">Plataforma Lenossa</a></li>
         </ul>
       </div>
@@ -230,14 +230,40 @@
             </div>
 
             <div class="column small-12 medium-6 medium-offset-1 medium-text-left align-self-middle">
-              <h4>Sistemas e Aplicativos</h4>
+              <h4>Aplicativos e Sistemas</h4>
               <p>A única área que eu acho, que vai exigir muita atenção nossa, e aí eu já aventei a hipótese de até criar um ministério. É na área de... Na área... Eu diria assim, como uma espécie de analogia com o que acontece na área agrícola.</p>
             </div>
           </div>
 
           <div class="row small-align-center text-center large-collapse">
             <div class="column small-12 medium-4 medium-text-right">
-              <img src="http://placehold.it/200x200" alt="">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133.15 132.7">
+                <g id="Camada_2" data-name="Camada 2">
+                      <g id="search">
+                          <circle cx="48.75" cy="48.75" r="44.75" style="fill:#00485e;stroke:#fff;stroke-miterlimit:10;stroke-width:8px" />
+                          <path d="M31.23,33.77a2.85,2.85,0,0,0-2.84,2.84v2.25a2.85,2.85,0,0,0,2.84,2.84H70.07V33.77Z" style="fill:#f4eee0" />
+                          <path d="M75.29,33.77H70.07V41.7h5.22a2.85,2.85,0,0,0,2.84-2.84V36.61A2.85,2.85,0,0,0,75.29,33.77Z" style="fill:#1d1930" />
+                          <path d="M75.67,39.06l-.84-1a1.74,1.74,0,1,0-.77.65l.84,1a.46.46,0,0,0,.65.05l.07-.06A.46.46,0,0,0,75.67,39.06Zm-3.08-1.27a1,1,0,1,1,1.44.12A1,1,0,0,1,72.59,37.79Z" style="fill:#efebe2" />
+                          <path d="M50.17,49.9l-4.12-4.17a15,15,0,1,0-2.51,2.48l4.12,4.17ZM25.69,45a12.17,12.17,0,1,1,17.22.1A12.17,12.17,0,0,1,25.69,45Z" style="fill:#1d1930" />
+                          <path d="M53.64,50a2.5,2.5,0,0,0-3.52,0l-2.41,2.38a2.5,2.5,0,0,0,0,3.52L64,72.33l5.95-5.88Z" style="fill:#e85d3d" />
+                          <path d="M64,72.33l3,3a2.5,2.5,0,0,0,3.52,0L72.91,73a2.5,2.5,0,0,0,0-3.52l-3-3Z" style="fill:#77b5b2" />
+                          <path d="M28.31,29.16c1,.8,0,1.82-.28,2.13a6.78,6.78,0,0,0-1.73,7.56c.8,1.39-1.48,2.67-2.27.68C21.58,35.21,26.27,27.25,28.31,29.16Z" style="fill:#fff;opacity:0.47000000000000003" />
+                      </g>
+                      <g id="laptop">
+                          <circle cx="84.4" cy="83.95" r="44.75" style="fill:#00485e;stroke:#fff;stroke-miterlimit:10;stroke-width:8px" />
+                          <path d="M63.69,95.8l.42,0h42a.79.79,0,0,1,.75.36,5,5,0,0,0,.83.78l5.47,4.81c0,.16-.15.17-.27.18s-.28,0-.42,0H56.32c-.14,0-.28,0-.42,0s-.25,0-.27-.18l5.93-5.22a2,2,0,0,0,.51-.55c.08-.16.23-.17.39-.17Z" style="fill:#e5e5e5" />
+                          <path d="M106.9,64.63c0,.19,0,.38,0,.57q0,14.05,0,28.11c0,.11,0,.22,0,.33a1,1,0,0,1-.81.91,3,3,0,0,1-.48,0H63.23a3.69,3.69,0,0,1-.72-.05,1.14,1.14,0,0,1-.64-1.15q0-14.12,0-28.25c0-.85.36-1.2,1.21-1.2h42.63A1.14,1.14,0,0,1,106.9,64.63Z" style="fill:#e5e5e5" />
+                          <path d="M55.63,101.76a.56.56,0,0,0,.32,0h56.89a.54.54,0,0,0,.32,0c.26.17.22.4.13.63a2.51,2.51,0,0,1-1.35,1.29,3.08,3.08,0,0,1-1.12.28,1.13,1.13,0,0,0-.33,0H58.67a1.18,1.18,0,0,0-.33,0,6.24,6.24,0,0,1-1.69-.4,4,4,0,0,1-.83-.67,1.54,1.54,0,0,1-.35-.59C55.41,102.1,55.4,101.89,55.63,101.76Z" style="fill:#6999a5" />
+                          <path d="M58.34,104a.51.51,0,0,1,.32,0h51.83a.5.5,0,0,1,.32,0H58.34Z" style="fill:#7899a5" />
+                          <rect x="63.69" y="66" width="41.36" height="26.86" rx="0.41" ry="0.41" style="fill:#1b7e8e" />
+                          <polygon points="73.63 82.87 89.61 72.11 88.68 70.65 95.16 69.64 91.61 75.28 90.79 73.89 73.63 85.92 73.63 82.87" style="fill:#fff" />
+                          <polygon points="73.63 89.21 77.17 89.21 77.17 84.4 73.63 86.88 73.63 89.21" style="fill:#fff" />
+                          <polygon points="78.16 89.21 81.7 89.21 81.7 81.23 78.16 83.71 78.16 89.21" style="fill:#fff" />
+                          <polygon points="82.69 89.21 86.23 89.21 86.23 78.06 82.69 80.53 82.69 89.21" style="fill:#fff" />
+                          <polygon points="87.22 77.36 87.22 89.21 90.76 89.21 90.76 74.89 87.22 77.36" style="fill:#fff" />
+                      </g>
+                  </g>
+              </svg>
             </div>
             <div class="column small-12 medium-6 medium-offset-1 medium-text-left align-self-middle">
               <h4>Marketing digital e SEO</h4>
@@ -421,8 +447,10 @@
           <img src="etc/fab/menu.svg" alt="">
         </div>
 
-        <div class="fab show-for-large backToTop">
-          <img src="etc/fab/arrow-up.svg" alt="">
+        <div class="fab show-for-large backToTop" data-magellan>
+          <a href="#top">
+            <img src="etc/fab/arrow-up.svg" alt="">
+          </a>
         </div>
 
 
