fixed background misplacement

--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
     <link rel="stylesheet" href="css/custom.css">
 
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:600" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Exo:600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
+    <link rel="stylesheet" href="fonts/font.css">
 
     <style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div>
     
@@ -31,7 +27,7 @@
           <img src="etc/lenossa.png" alt="">
       </div>
       <div class="top-bar-right">
-        <ul class="menu" data-magellan>
+        <ul class="menu" data-magellan data-options="animationEasing:swing; animationDuration:750">
           <li><a href="#section-inovacao" class="menu-navigation ">Inovação</a></li>
             <li><a href="#section-equipe" class="menu-navigation ">Equipe</a></li>
             <li><a href="#section-servicos" class="menu-navigation ">Serviços</a></li>
@@ -149,11 +145,11 @@
             </div>
             <div class="column small-12 medium-6 medium-offset-1 medium-text-left align-self-middle">
               <h4>Sites e Ecommerce</h4>
-              <p>A única área que eu acho, que vai exigir muita atenção nossa, e aí eu já aventei a hipótese de até criar um ministério. É na área de... Na área... Eu diria assim, como uma espécie de analogia com o que acontece na área agrícola.</p>
+              <!--<p>A única área que eu acho, que vai exigir muita atenção nossa, e aí eu já aventei a hipótese de até criar um ministério. É na área de... Na área... Eu diria assim, como uma espécie de analogia com o que acontece na área agrícola.</p>-->
             </div>
-          </div>
+          <!--</div>-->
 
-          <div class="row small-align-center text-center large-collapse">
+          <!--<div class="row small-align-center text-center large-collapse">-->
             <div class="column small-12 medium-4 medium-text-right">
 
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133.15 132.7">
@@ -227,15 +223,15 @@
                     </g>
                 </g>
               </svg>
+            <!--</div>-->
+
+              <div class="column small-12 medium-6 medium-offset-1 medium-text-left align-self-middle">
+                <h4>Aplicativos e Sistemas</h4>
+                <!--<p>A única área que eu acho, que vai exigir muita atenção nossa, e aí eu já aventei a hipótese de até criar um ministério. É na área de... Na área... Eu diria assim, como uma espécie de analogia com o que acontece na área agrícola.</p>-->
+              </div>
             </div>
 
-            <div class="column small-12 medium-6 medium-offset-1 medium-text-left align-self-middle">
-              <h4>Aplicativos e Sistemas</h4>
-              <p>A única área que eu acho, que vai exigir muita atenção nossa, e aí eu já aventei a hipótese de até criar um ministério. É na área de... Na área... Eu diria assim, como uma espécie de analogia com o que acontece na área agrícola.</p>
-            </div>
-          </div>
-
-          <div class="row small-align-center text-center large-collapse">
+          <!--<div class="row small-align-center text-center large-collapse">-->
             <div class="column small-12 medium-4 medium-text-right">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133.15 132.7">
                 <g id="Camada_2" data-name="Camada 2">
@@ -267,8 +263,9 @@
             </div>
             <div class="column small-12 medium-6 medium-offset-1 medium-text-left align-self-middle">
               <h4>Marketing digital e SEO</h4>
-              <p>Se hoje é o dia das crianças... Ontem eu disse: o dia da criança é o dia da mãe, dos pais, das professoras, mas também é o dia dos animais, sempre que você olha uma criança, há sempre uma figura oculta, que é um cachorro atrás. O que é algo muito importante!</p>
+              <!--<p>Se hoje é o dia das crianças... Ontem eu disse: o dia da criança é o dia da mãe, dos pais, das professoras, mas também é o dia dos animais, sempre que você olha uma criança, há sempre uma figura oculta, que é um cachorro atrás. O que é algo muito importante!</p>-->
             </div>
+
           </div>
           
       </section>
